Organize OS specific dirs.
Set backup, temp and undo folders to be under vimfiles.  Group OS specific
stuff (dirs and fonts) together in vimrc.  *Shakefist* at git for not
supporting empty folders.  Ignore the contents of these folders.

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@ Thumbs.db
 # Bundle directory is managed by Vundle
 bundle/
 
-# Backup dir is local
+# Directories for backup/temp/undo files
 backup/
+temp/
+undo/
